compiler-core/src/fsharp/tests/snapshots/gleam_core__fsharp__tests__prelude__qualified_error.snap
---
source: compiler-core/src/fsharp/tests/prelude.rs
expression: "import gleam\npub fn go() { gleam.Error(1) }\n"
---
module rec my.``mod``
open gleam

let go () = begin
    gleam.Error (1L)
end
