compiler-core/src/fsharp/tests/snapshots/gleam_core__fsharp__tests__prelude__qualified_nil.snap
---
source: compiler-core/src/fsharp/tests/prelude.rs
expression: "import gleam\npub fn go() { gleam.Nil }\n"
---
module rec my.``mod``

let go () = begin
    gleam.Nil
end
