compiler-core/src/fsharp/tests/snapshots/gleam_core__fsharp__tests__prelude__qualified_ok.snap
---
source: compiler-core/src/fsharp/tests/prelude.rs
expression: "import gleam\npub fn go() { gleam.Ok(1) }\n"
---
module rec my.``mod``


let go () = begin
    gleam.Ok (1L)
end
